Fix T75489: Crash on deleting current workspace from the outliner

It should not be possible to delete the current workspace from the
outliner. Show an error message instead.